--- a/public/index.html
+++ b/public/index.html
@@ -5,16 +5,13 @@
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>nutriKNOW</title>
-        <meta name="description" content="nutriknow,a food comparison engine">
+        <meta name="description" content="nutriknow, a food comparison engine that integrates the USDA food composition database. made by web developers sebastian vega, john glynn, and rachel mahan in miami florida. technologies include javascript, react, html, css, and mateialize css. ">
+        <meta name="keywords" content="nutriknow interactive food comparison engine">
         <link rel="icon" type="image/png" href="img/nutrient_favicon.png" sizes="16x16">
         <link rel="stylesheet" href="css/materialize.css">
         <link rel="stylesheet" href="css/main.css">
-        <!-- <link rel="stylesheet" href="css/bootstrap-theme.min.css"> -->
-        <!-- <link rel="stylesheet" href="css/bootstrap.min.css"> -->
     </head>
     <body>
-
-
       <div class="parallax-container xsmall">
             <div class="parallax"><img src="img/nutrient_background_pattern_blue.png"></div>
       </div>
