--- a/public/index.html
+++ b/public/index.html
@@ -24,22 +24,22 @@
             </div>
             <div class="row">
               <div class="col s2">
-                  <img class="cute_food" id="apple" src="img/apple.png">
+                  <img class="cute_food" id="apple" src="img/apple.png" alt="happy little apple">
               </div>
               <div class="col s2">
-                  <img class="cute_food"  id="turkey_leg" src="img/turkey_leg.png">
+                  <img class="cute_food"  id="turkey_leg" src="img/turkey_leg.png" alt="happy little turkey leg">
               </div>
               <div class="col s2">
-                  <img class="cute_food" id="egg" src="img/egg.png">
+                  <img class="cute_food" id="egg" src="img/egg.png" alt="happy little egg">
               </div>
               <div class="col s2">
-                  <img class="cute_food" id="pear" src="img/pear.png">
+                  <img class="cute_food" id="pear" src="img/pear.png" alt="happy little pear">
               </div>
                <div class="col s2">
-                  <img class="cute_food"  id="eggplant" src="img/eggplant.png">
+                  <img class="cute_food"  id="eggplant" src="img/eggplant.png" alt="happy little eggplant">
               </div>
                <div class="col s2">
-                  <img class="cute_food" id="mushroom" src="img/mushroom.png">
+                  <img class="cute_food" id="mushroom" src="img/mushroom.png" alt="happy little mushroom">
               </div>
           </div>
       </div>
